[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "naqslab_devices"
version = "0.5.0"
description = "Namespace package for naqslab devices"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = "BSD-2-Clause"
dependencies = []  # Add any runtime dependencies here

# [tool.setuptools.packages.find]
# include = ["naqslab_devices.*"]

[tool.setuptools.package-dir]
"naqslab_devices" = "./devices"